# data-san

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
