[package]
name = "data-san"
version = "0.1.0"
description = "A Data Sanitization Tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-open", "dialog-save", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-rename-file", "fs-write-file", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.52", features = ["Win32_Storage", "Win32_Foundation", "Win32_Storage_FileSystem"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
